--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -35,11 +35,13 @@
             android:textColor="#FFFFFF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
         <ImageView
-            android:layout_alignParentRight="true"
-            android:src="@drawable/man"
             android:layout_width="62dp"
-            android:layout_height="62dp"/>
+            android:layout_height="62dp"
+            android:layout_alignParentRight="true"
+            android:onClick="profilePressed"
+            android:src="@drawable/man" />
 
 
 
@@ -56,120 +58,127 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            app:cardElevation="6dp"
+            android:layout_columnWeight="1"
+            android:layout_margin="12dp"
+            android:onClick="coursesPressed"
             app:cardCornerRadius="12dp"
-            android:layout_margin="12dp">
+            app:cardElevation="6dp">
 
             <LinearLayout
-                android:orientation="vertical"
-                android:padding="16dp"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <ImageView
-                    android:src="@drawable/book"
                     android:layout_width="80dp"
-                    android:layout_height="80dp"/>
+                    android:layout_height="80dp"
+                    android:src="@drawable/book" />
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:textSize="18sp"
                     android:text="Courses"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="18sp" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            app:cardElevation="6dp"
+            android:layout_columnWeight="1"
+            android:layout_margin="12dp"
+            android:onClick="profilePressed"
             app:cardCornerRadius="12dp"
-            android:layout_margin="12dp">
+            app:cardElevation="6dp">
 
             <LinearLayout
-                android:orientation="vertical"
-                android:padding="16dp"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <ImageView
-                    android:src="@drawable/user"
                     android:layout_width="80dp"
-                    android:layout_height="80dp"/>
+                    android:layout_height="80dp"
+                    android:src="@drawable/user" />
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:textSize="18sp"
                     android:text="Profile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="18sp" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            app:cardElevation="6dp"
+            android:layout_columnWeight="1"
+            android:layout_margin="12dp"
+            android:onClick="progressPressed"
             app:cardCornerRadius="12dp"
-            android:layout_margin="12dp">
+            app:cardElevation="6dp">
 
             <LinearLayout
-                android:orientation="vertical"
-                android:padding="16dp"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <ImageView
-                    android:src="@drawable/progress"
                     android:layout_width="80dp"
-                    android:layout_height="80dp"/>
+                    android:layout_height="80dp"
+                    android:src="@drawable/progress" />
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:textSize="18sp"
                     android:text="Progress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="18sp" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            app:cardElevation="6dp"
+            android:layout_columnWeight="1"
+            android:layout_margin="12dp"
+            android:onClick="settingsPressed"
             app:cardCornerRadius="12dp"
-            android:layout_margin="12dp">
+            app:cardElevation="6dp">
 
             <LinearLayout
-                android:orientation="vertical"
-                android:padding="16dp"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <ImageView
-                    android:src="@drawable/gear"
                     android:layout_width="80dp"
-                    android:layout_height="80dp"/>
+                    android:layout_height="80dp"
+                    android:src="@drawable/gear" />
 
                 <TextView
-                    android:layout_marginTop="12dp"
-                    android:textSize="18sp"
-                    android:text="Settings"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:text="Settings"
+                    android:textSize="18sp" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
