--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,17 @@
         <item name="colorAccent">@color/background_blue</item>
     </style>
 
+    <style name="ThemeOverlay.ANDAR_App_Project.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    </style>
+
+    <style name="Theme.ANDAR_App_Project.Fullscreen" parent="Theme.ANDAR_App_Project">
+        <item name="android:actionBarStyle">
+            @style/Widget.Theme.ANDAR_App_Project.ActionBar.Fullscreen
+        </item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+
 </resources>
