- updated the design for profile activity - updated the design for progress activity

--- a/app/src/main/res/layout/activity_progress.xml
+++ b/app/src/main/res/layout/activity_progress.xml
@@ -12,32 +12,79 @@
         android:layout_height="match_parent">
 
         <RelativeLayout
-            android:layout_marginTop="32dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginRight="20dp">
 
             <TextView
                 android:id="@+id/txtDashboard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Progress"
-                android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:textSize="22sp" />
+
             <TextView
-                android:layout_marginTop="6dp"
-                android:layout_below="@id/txtDashboard"
-                android:textSize="14sp"
-                android:textColor="#FFFFFF"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txtDashboard"
+                android:layout_marginTop="6dp"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp" />
+
             <ImageView
-                android:layout_alignParentRight="true"
-                android:src="@drawable/man"
                 android:layout_width="62dp"
-                android:layout_height="62dp"/>
+                android:layout_height="62dp"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/man" />
+
         </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_marginTop="40dp"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Geometry" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:indeterminate="true"/>
+
+            <TextView
+                android:layout_marginTop="40dp"
+
+                android:gravity="center"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Anatomy" />
+
+            <ProgressBar
+                android:id="@+id/progressBar2"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:indeterminate="true"/>
+        </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
