--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -25,7 +25,8 @@
         android:textSize="22sp"
         android:textColor="#FFFFFF"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        />
     <TextView
         android:layout_marginTop="6dp"
         android:layout_below="@id/txtDashboard"
@@ -33,12 +34,105 @@
         android:textColor="#FFFFFF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <ImageView
-        android:layout_alignParentRight="true"
-        android:src="@drawable/man"
-        android:layout_width="62dp"
-        android:layout_height="62dp"/>
+
     </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:srcCompat="@drawable/man" />
+
+            <Button
+                android:id="@+id/button"
+                android:backgroundTint="#380036"
+                android:layout_width="96dp"
+                android:layout_height="wrap_content"
+                android:text="Change" />
+
+            <TextView
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:layout_marginTop="20dp"
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Edit name:" />
+
+            <EditText
+                android:id="@+id/editTextTextPersonName"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Name"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/white"
+                />
+
+            <TextView
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:layout_marginTop="20dp"
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Edit email:" />
+
+            <EditText
+                android:id="@+id/editTextTextEmailAddress"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:minHeight="48dp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/white"
+                />
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Edit phone:" />
+
+            <EditText
+                android:id="@+id/editTextPhone"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Phone"
+                android:inputType="phone"
+                android:minHeight="48dp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/white"
+                />
+
+            <Button
+                android:layout_marginTop="20dp"
+                android:id="@+id/button2"
+                android:backgroundTint="#380036"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="Save Changes"/>
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
